Fix bill page spacing.

--- a/src/css/defaults/layout.scss
+++ b/src/css/defaults/layout.scss
@@ -189,11 +189,6 @@ main.main.main-fixed {
     width: 100%;
   }
 
-  .step-bill .row.padded {
-    margin-bottom: 0;
-    border: 1px solid red;
-  }
-
   .step-fork .fifth.four {
     width: 100%;
   }
